Misc refactoring for http client (#824)
* misc cleanup in HttpClient code update

* share httpclient where possible

* remove always null parameter

* breaking change: don't expose httpClient to the scripting service anymore

* add test for file download manager

* add missing license file

* fix recaptcha/post form

* fix mailgun

* cleanup, re-add method basicCredentials, remove unused code

* switch to mockhttpserver

* initial work for testing simple http client

* simple http client: add json body test, cleanup unused http utils code

* add missing charset in getBytes() call

* simple http client: add head test

* simple http client: add post json test

* simple http client: add post form test

* simple http client: add postfile test

* simple http client: add postbody test

* simple http client: add postbody test